k3/weather-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather-api-depl
  name: weather-api-svc
  namespace: weather
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30081
  selector:
    app: weather-api-depl
  type: NodePort
status:
  loadBalancer: {}
