k3/weather-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: weather
spec:
  rules:
  - host: weather.vivekpadayattil.com
    http:
      paths:
      - backend:
          service:
            name: weather-frontend-svc
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
